--- a/styles/marta.css
+++ b/styles/marta.css
@@ -1,10 +1,11 @@
-html, body, .leftpart {
+html, body {
 	height: 100%;
 }
 h1 {
 	
 	font-size: 30px;
 	font-style: bold;
+	font-color: ff3366;
 }
 .hidden {
 	visibility: hidden;
@@ -13,10 +14,11 @@ body {
 	margin: 15px;
 	overflow: hidden;
 	font-family: helvetica, arial, sans-serif;
-	background-image: url("../images/bg.png");
+	background-image: url("../images/textures/txt10.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 }
+/* 
 .leftpart {
 	box-sizing: border-box;
 	padding-right: 5px;
@@ -32,8 +34,24 @@ body {
 }
 .descr-text {
 	box-sizing: border-box;
-	
+
 }
+OVERRIDE ME */
+.tt{
+	margin-top: 20px;
+	width: 100%;
+	height: 70%;
+	/*border: 1px;*/
+}
+.tdleft {
+	vertical-align: bottom;
+	text-align: right; 
+}
+.tdright {
+	vertical-align: bottom;
+	text-align: left; 
+}
+/* LINKS*/
 a:link {
 	color: #9F2C06;
 }
@@ -44,7 +62,4 @@ a:hover {
 	color: #FF4000;
 	
 }
-.tdleft {
-	float: right;
-	text-align: right;
-}
+
